Updated test_colab and custom_dataset

--- a/cluster/login.yaml
+++ b/cluster/login.yaml
@@ -19,10 +19,16 @@ spec:
     volumeMounts:
     - name: k5wang-volume     #use your own volume path
       mountPath: /k5wang-volume
+    - name: k5wang-volume-datasets
+      mountPath: /k5wang-volume-datasets
   restartPolicy: Never
   volumes:
     - name: k5wang-volume
       persistentVolumeClaim:
         claimName: k5wang-volume
+    - name: k5wang-volume-datasets
+      persistentVolumeClaim:
+        claimName: k5wang-volume-datasets
+
 
 
