--- a/cluster/login.yaml
+++ b/cluster/login.yaml
@@ -11,8 +11,9 @@ spec:
     # args: ["bash"]
     resources:
       requests:
-        memory: "8Gi"
+        memory: "12Gi"
         cpu: "2"
+        nvidia.com/gpu: "1"
       limits:
         nvidia.com/gpu: "1"
         memory: "12Gi"
@@ -30,6 +31,8 @@ spec:
     - name: k5wang-volume-datasets
       persistentVolumeClaim:
         claimName: k5wang-volume-datasets
+  nodeSelector:
+    gpu-type: "1080Ti"
 
 
 
