--- a/cluster/job_search.yaml
+++ b/cluster/job_search.yaml
@@ -20,7 +20,7 @@ spec:
         workingDir: /k5wang-volume/Blood_cell_classification_kaggle/cluster  # dir in which code is executed
         command: ["/bin/bash", "-c"]
         # args: ["python ../darts-LPT/train_search_ts.py --unrolled --batch_size 3 --epochs 25 --save 50-LR_0.005 --is_parallel 1"]
-        args: ["python ../darts-LPT/train_search_ts.py --unrolled --batch_size 3 --epochs 25 --save DEBUG --is_parallel 1"]
+        args: ["python ../darts-LPT/train_search_ts.py --unrolled --batch_size 3 --epochs 25 --save 50-LR_0.005-FIXED_LOSS --is_parallel 1"]
         # command: ["bash","train.sh"]
         # command: ["/bin/bash", "-c"]
         # args: ["pwd && ls; bash train.sh"]
@@ -28,11 +28,11 @@ spec:
           requests:
             memory: "16Gi"
             cpu: "2"
-            nvidia.com/gpu: 5
+            nvidia.com/gpu: 4
           limits:
             memory: "16Gi"
             cpu: "2"
-            nvidia.com/gpu: 5
+            nvidia.com/gpu: 4
 
         volumeMounts:
         - name: k5wang-volume     #use your own volume path
