--- a/cluster/.vscode/extensions.json
+++ b/cluster/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "ms-python.python"
+        "ms-python.python",
+        "ms-kubernetes-tools.vscode-kubernetes-tools"
     ]
 }
