--- a/cluster/config/job_gpu_debug.yaml
+++ b/cluster/config/job_gpu_debug.yaml
@@ -24,7 +24,7 @@ spec:
         # args: ["python ../darts-LPT/train_search_ts.py --unrolled --batch_size 3 --epochs 25 --save 50-LR_0.005-FIXED_LOSS --is_parallel 1, --gpu 0,1"]
         
         command: ["/bin/bash", "-c"]
-        args: [“bash /local/Blood_cell_classification_kaggle/cluster/bash/job_gpu_debug.yaml"]
+        args: [“bash /local/Blood_cell_classification_kaggle/cluster/bash/gpu_debug.sh"]
         
         resources:
           requests:
