--- a/cluster/config/job_gpu_debug.yaml
+++ b/cluster/config/job_gpu_debug.yaml
@@ -4,7 +4,7 @@ metadata:
   # labels:
   #   k8s-app: research
   # generateName: k5wang-job-train     # Name of Job
-  name: k5wang-job-debug
+  name: k5wang-job-debug1080
   namespace: ecepxie
 spec:
   template:
@@ -59,5 +59,6 @@ spec:
             - matchExpressions:
               - key: gpu-type
                 operator: In # Use NotIn for other types
-                values:
-                - 2080Ti
+                values: 1080Ti 
+                # - 2080Ti
+
