--- a/cluster/config/login.yaml
+++ b/cluster/config/login.yaml
@@ -34,8 +34,8 @@ spec:
     - name: k5wang-volume-datasets
       persistentVolumeClaim:
         claimName: k5wang-volume-datasets
-  # nodeSelector:
-  #   gpu-type: "2080Ti"
+  nodeSelector:
+    gpu-type: "1080Ti"
 
 
 
