--- a/cluster/config/job_train.yaml
+++ b/cluster/config/job_train.yaml
@@ -4,7 +4,7 @@ metadata:
   # labels:
   #   k8s-app: research
   # generateName: k5wang-job-train     # Name of Job
-  name: k5wang-job-train
+  name: k5wang-train-ts-bc
   namespace: ecepxie
 spec:
   template:
@@ -17,29 +17,35 @@ spec:
       - name: research
         image: gitlab-registry.nautilus.optiputer.net/vamsirk/research-containers
         imagePullPolicy: Always
-        workingDir: /k5wang-volume/Blood_cell_classification_kaggle/cluster  # dir in which code is executed
-        command: ["/bin/bash", "-c"]
-        args: ["python ../darts-LPT/train_custom_colab.py --epochs 50 --save CIFAR-50-WITH_AUX"]
-        # command: ["bash","train.sh"]
+        workingDir: /local
+        # workingDir: /k5wang-volume/Blood_cell_classification_kaggle/cluster  # dir in which code is executed
+        
         # command: ["/bin/bash", "-c"]
-        # args: ["pwd && ls; bash train.sh"]
+        # args: ["python ../darts-LPT/train_search_ts.py --unrolled --batch_size 3 --epochs 25 --save 50-LR_0.005-FIXED_LOSS --is_parallel 1, --gpu 0,1"]
+        
+        command: ["/bin/bash", "/k5wang-volume/Blood_cell_classification_kaggle/cluster/bash/gpu_debug.sh"]
+        
         resources:
           requests:
-            memory: "12Gi"
+            memory: "16Gi"
             cpu: "2"
-            nvidia.com/gpu: 4
+            nvidia.com/gpu: 1
           limits:
-            memory: "12Gi"
+            memory: "16Gi"
             cpu: "2"
-            nvidia.com/gpu: 4
+            nvidia.com/gpu: 1
 
         volumeMounts:
+        - name: local
+          mountPath: /local
         - name: k5wang-volume     #use your own volume path
           mountPath: /k5wang-volume
         - name: k5wang-volume-datasets
           mountPath: /k5wang-volume-datasets
     
       volumes:
+        - name: local
+          emptyDir: {}
         - name: k5wang-volume
           persistentVolumeClaim:
             claimName: k5wang-volume
@@ -53,5 +59,7 @@ spec:
             - matchExpressions:
               - key: gpu-type
                 operator: In # Use NotIn for other types
-                values:
-                - 2080Ti
+                values: 
+                  - 1080Ti
+                # - 2080Ti
+
