--- a/cluster/config/search-OFF-BC-50.yaml
+++ b/cluster/config/search-OFF-BC-50.yaml
@@ -4,7 +4,7 @@ metadata:
   # labels:
   #   k8s-app: research
   # generateName: k5wang-job-train     # Name of Job
-  name: k5wang-search-off-bc-50
+  name: k5wang-search-off-bc-50-2
   namespace: ecepxie
 spec:
   template:
@@ -48,7 +48,8 @@ spec:
           emptyDir: {}
       
       nodeSelector:
-        gpu-type: "2080Ti"
+        # gpu-type: "2080Ti"
+        gpu-type: "TITANRTX"
         nautilus.io/disktype: nvme   
 
       # affinity:
