--- a/cluster/config/train-OFF-BC-50-300.yaml
+++ b/cluster/config/train-OFF-BC-50-300.yaml
@@ -4,7 +4,7 @@ metadata:
   # labels:
   #   k8s-app: research
   # generateName: k5wang-job-train     # Name of Job
-  name: k5wang-search-pdarts-50-2
+  name: k5wang-eval-off-50-300 # 50 search epochs / 300 train epochs
   namespace: ecepxie
 spec:
   template:
@@ -18,46 +18,47 @@ spec:
         image: gitlab-registry.nautilus.optiputer.net/vamsirk/research-containers
         imagePullPolicy: Always
         workingDir: /local
-        command: ["/bin/bash", "/k5wang-volume/Blood_cell_classification_kaggle/cluster/bash/search-pdarts.sh"]
+        # workingDir: /k5wang-volume/Blood_cell_classification_kaggle/cluster  # dir in which code is executed
+        
+        command: ["/bin/bash", "/k5wang-volume/Blood_cell_classification_kaggle/cluster/bash/train-OFF-BC-50-300.sh"]
+        
         resources:
           requests:
-            memory: "8Gi"
+            memory: "3Gi"
             cpu: "2"
             nvidia.com/gpu: 1
           limits:
-            memory: "8Gi"
+            memory: "3Gi"
             cpu: "2"
             nvidia.com/gpu: 1
 
         volumeMounts:
+        - name: local
+          mountPath: /local
         - name: k5wang-volume     #use your own volume path
           mountPath: /k5wang-volume
         - name: k5wang-volume-datasets
           mountPath: /k5wang-volume-datasets
-        - name: local
-          mountPath: /local
     
       volumes:
+        - name: local
+          emptyDir: {}
         - name: k5wang-volume
           persistentVolumeClaim:
             claimName: k5wang-volume
         - name: k5wang-volume-datasets
           persistentVolumeClaim:
             claimName: k5wang-volume-datasets
-        - name: local
-          emptyDir: {}
-      
-      nodeSelector:
-        # gpu-type: "2080Ti"
-        gpu-type: "2080Ti"
-        nautilus.io/disktype: nvme   
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: gpu-type
+                operator: In # Use NotIn for other types
+                values: 
+                  # - 1080Ti
+                  # - 2080Ti
+                  - TITANRTX
 
-      # affinity:
-      #   nodeAffinity:
-      #     requiredDuringSchedulingIgnoredDuringExecution:
-      #       nodeSelectorTerms:
-      #       - matchExpressions:
-      #         - key: gpu-type
-      #           operator: In # Use NotIn for other types
-      #           values:
-      #           - TITANRTX
+
