--- a/cluster/config/train-BC-50-300.yaml
+++ b/cluster/config/train-BC-50-300.yaml
@@ -58,6 +58,6 @@ spec:
                 operator: In # Use NotIn for other types
                 values: 
                   # - 1080Ti
-                  # - 2080Ti
-                  - TITANRTX
+                  - 2080Ti
+                  # - TITANRTX
 
