--- a/cluster/config/search-pdarts-PBC.yaml
+++ b/cluster/config/search-pdarts-PBC.yaml
@@ -23,11 +23,11 @@ spec:
           requests:
             memory: "8Gi"
             cpu: "2"
-            nvidia.com/gpu: 4
+            nvidia.com/gpu: 2
           limits:
             memory: "8Gi"
             cpu: "2"
-            nvidia.com/gpu: 4
+            nvidia.com/gpu: 2
 
         volumeMounts:
         - name: k5wang-volume     #use your own volume path
@@ -47,11 +47,26 @@ spec:
         - name: local
           emptyDir: {}
       
-      nodeSelector:
-        gpu-type: "1080Ti"
-        # gpu-type: "2080Ti"
-        # gpu-type: "TITANRTX"
-        nautilus.io/disktype: nvme   
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: gpu-type
+                operator: In # Use NotIn for other types
+                values: 
+                  - 1080Ti
+                  - 1080Ti
+                  # - 2080Ti
+                  # - TITANRTX
+              - key: nautilus.io/disktype
+                value: nvme
+
+      # nodeSelector:
+      #   gpu-type: "1080Ti"
+      #   # gpu-type: "2080Ti"
+      #   # gpu-type: "TITANRTX"
+      #   nautilus.io/disktype: nvme   
 
       # affinity:
       #   nodeAffinity:
