--- a/cluster/config/login.yaml
+++ b/cluster/config/login.yaml
@@ -35,8 +35,8 @@ spec:
       persistentVolumeClaim:
         claimName: k5wang-volume-datasets
   nodeSelector:
-    gpu-type: "1080Ti"
-  #   # gpu-type: "2080Ti"
+    # gpu-type: "1080Ti"
+    gpu-type: "2080Ti"
 
 
 
