--- a/cluster/config/search-PBC-darts-off.yaml
+++ b/cluster/config/search-PBC-darts-off.yaml
@@ -46,28 +46,13 @@ spec:
             claimName: k5wang-volume-datasets
         - name: local
           emptyDir: {}
-      
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: gpu-type
-                operator: In # Use NotIn for other types
-                values: 
-                  # - 1080Ti
-                  - 2080Ti
-                  # - TITANRTX
-              - key: nautilus.io/disktype
-                operator: In
-                values: 
-                  - nvme
 
-      # nodeSelector:
-      #   gpu-type: "1080Ti"
-      #   # gpu-type: "2080Ti"
-      #   # gpu-type: "TITANRTX"
-      #   nautilus.io/disktype: nvme   
+      nodeSelector:
+        gpu-type: "1080"
+        # gpu-type: "1080Ti"
+        # gpu-type: "2080Ti"
+        # gpu-type: "TITANRTX"
+        nautilus.io/disktype: nvme   
 
       # affinity:
       #   nodeAffinity:
